# fastapi-react-cassandra-dashboard

./: .gitignore  README.md  docker-compose.yml
backend/: .flake8  backend.dockerfile  mypy.ini  pyproject.toml
backend/app/: __main__.py
backend/app/api/: deps.py  utils.py
backend/app/api/api_v1/endpoints/: items.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  cass_db.py
backend/app/schemas/: __init__.py  dashboard.py  rentals.py
backend/app/tests/: conftest.py
backend/app/tests/api/: test_return.py
frontend/: frontend.dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/Logo/: Logo.js
frontend/src/layout/MainLayout/Drawer/DrawerContent/: index.js
frontend/src/pages/dashboard/: IncomeAreaChart.js  OrdersTable.js  index.js
frontend/src/pages/extra-pages/: SamplePage.js
frontend/src/routes/: index.js
